fixed cramped iphone nav

--- a/src/components/Account.module.css
+++ b/src/components/Account.module.css
@@ -117,6 +117,11 @@ etc...
     border-radius: 20px;
     border: 2px solid #272727;
   }
+
+    
+  input {
+    width: 100% !important;
+  }
   
   @media screen and (min-width: 481px) {
     h1 {    
@@ -143,10 +148,6 @@ etc...
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
       background-clip: text;
-    }
-  
-    input {
-      width: 450px;
     }
     
     .body {
@@ -191,10 +192,6 @@ etc...
       background-clip: text;
     
       text-shadow: 0px 0px 15px rgba(217, 119, 204, 0.25), 0px 0px 35px rgba(255, 255, 255, 0.1);
-    }
-    
-    input {
-      width: 300px;
     }
   
     .body {
