--- a/src/components/Home.module.css
+++ b/src/components/Home.module.css
@@ -164,10 +164,14 @@ button {
     border-bottom: solid 1px #272727;
   }
 
-  .navItems {
+  .webNavItems {
     display: flex;
     flex-direction: row;
     gap: 16px;
+  }
+
+  .mobileAboutItem, .mobileProfileItem {
+    display: none;
   }
 
   .webPageSelector {
@@ -287,6 +291,8 @@ button {
     align-items: center;
     gap: 0.5rem;
     padding: 16px 32px;
+
+    position: relative;
   
     border-bottom: solid 1px #272727;
   }
@@ -295,12 +301,22 @@ button {
     font-size: 24pt !important;
   }
 
-  .navItems {
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    gap: 0.5rem;
-    justify-content: right;
+  .webNavItems {
+    display: none;
+  }
+
+  .mobileAboutItem {
+    position: absolute;
+    left: 24px;
+    top: 50%;
+    transform: translateY(-40%);
+  }
+
+  .mobileProfileItem {
+    position: absolute;
+    right: 24px;
+    top: 50%;
+    transform: translateY(-40%);
   }
 
   .webPageSelector {
